# pyopik

./: .gitignore  README.md  pyproject.toml  setup.py
notebooks/: example.ipynb  test.ipynb
pyopik/: __init__.py  opik.py
